--- a/client/res/layout/display_grid.xml
+++ b/client/res/layout/display_grid.xml
@@ -3,6 +3,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
-       
+    <ImageView
+        android:id="@+id/ivDisplay"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:src="@drawable/ic_launcher" />
 
 </LinearLayout>
