--- a/client/res/layout/display_grid.xml
+++ b/client/res/layout/display_grid.xml
@@ -3,11 +3,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
-    <ImageView
-        android:id="@+id/ivDisplay"
+    <se.axisandandroids.client.display.Panel
+        android:id="@+id/panel1"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:src="@drawable/ic_launcher" />
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
